# daqling

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  COPYRIGHT  ChangeLog.md.REMOVED.git-id  Doxyfile.in  Doxygen.cfg.REMOVED.git-id  LICENSE  README.md  README_ERS.md  README_SPACK.md  doxy.cfg  doxygen.cfg  setup.sh
Control/: config.json  daqinterface.py  supervisord.py
Core/core/: BaseClass.hpp  Configuration.hpp  ConnectionManager.hpp  Core.hpp  DAQProcess.hpp  PluginManager.hpp
Core/src/: .ConnectionManager.cpp.swp  ConnectionManager.cpp  Core.cpp  main_core.cpp
Modules/: BoardReader.cpp  EventBuilder.cpp
Modules/modules/: BoardReader.hpp  EventBuilder.hpp
Modules/src/: BoardReader.cpp  EventBuilder.cpp
Test/: CMakeLists.txt
Test/src/: test_logging.cpp  test_plugin.cpp
Utilities/: CMakeLists.txt
Utilities/src/: Configuration.cpp  Logging.cpp  configuration.cpp  logging.cpp
Utilities/utilities/: .configuration.hpp.swp  Common.hpp  Configuration.hpp  Logging.hpp  ProducerConsumerQueue.hpp  Singleton.hpp  Types.hpp  configuration.hpp  logging.hpp  reusable_thread.hpp
ansible/: README.md  ansible.cfg  daq-ansible.sh  get-arm-toolchains.yml  hosts  install-boost-1_70.yml  install-cassandra.yml  install-controldeps.yml  install-influxdb-grafana.yml  install-mongodb.yml  install-redis.yml  install-webdeps.yml  set-up-host.yml
ansible/playbooks/: ansible.cfg  development-tools.yml  hosts  install-boost-1_70.yml  install-cassandra.yml  install-controldeps.yml  install-externals.yml  set-up-host.yml
cmake/: AUTOLOAD-versions.cmake  AUTOLOAD.cmake  README.md  clang-format.cmake  clang-tidy.cmake  compile_commands_filter.py  daqling.cmake  install.sh  setup-aarch64.sh  setup-armv7.sh  setup-armv8l.sh  setup-cvmfs.sh  setup-openhpc.sh  setup.sh
configs/: README.md  common.json  config-schema.json  config.stream-level.json  connection-test.json  control-tree.json  control-tree2.json  demo-dict.json  demo-influxdb.json  demo-metrics-manager-no-queue.json  demo-metrics-manager-udp.json  demo-metrics-manager.json  demo-ref-external.json  demo-ref.json  demo.json  demo2.json  dlconf.json  ers-test.json  fsm-rules.json  grafana2.json  json-config.schema  test-config.json  test-monitoring.json  valid-config.json
date/: event.h  ldc.cc
date/tester/: go.mod  (+1 more)
doc/: Doxyfile.in  avatars.png.REMOVED.git-id  json.gif.REMOVED.git-id
docker/: Dockerfile  docker-compose.yml
etc/: Dockerfile  Dockerfile.al9  control-requirements.txt  logstash.conf  web-requirements.txt
src/: main.cpp
src/Connections/Dummy/: CMakeLists.txt  DummyReceiver.cpp  DummyReceiver.hpp  DummySender.cpp  DummySender.hpp
src/Connections/Local/: CMakeLists.txt  LocalReceiver.cpp  LocalReceiver.hpp  LocalSender.cpp  LocalSender.hpp
src/Core/: CMakeLists.txt  Command.cpp  Command.hpp  Configuration.hpp  ConnectionLoader.cpp  ConnectionLoader.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Core.cpp  Core.hpp  DAQProcess.hpp  DataLogger.hpp  DynamicLinkIssues.hpp  Metric.hpp  ModuleLoader.cpp  ModuleLoader.hpp  ModuleManager.cpp  ModuleManager.hpp  PluginManager.cpp  PluginManager.hpp  Queue.cpp  Queue.hpp  Receiver.cpp  Receiver.hpp  ResourceFactory.hpp  Sender.cpp  Sender.hpp  Statistics.cpp  Statistics.hpp  dynamic_module_impl.cpp  logging_instance_impl.cpp  main_core.cpp
src/Modules/: BoardReader.cpp  BoardReaderBinary.cpp  CMakeLists.txt  CassandraDataLogger.cpp  EventBuilder.cpp  EventBuilderBinary.cpp  FileDataLogger.cpp  MetricsSimulator.cpp  NewModule.cpp  NewModule.cpp_template
src/Modules/BoardReader/: BoardReader.cpp  BoardReader.hpp  BoardReaderModule.cpp  BoardReaderModule.hpp  CMakeLists.txt
src/Modules/BoardReaderBinary/: BoardReaderBinary.cpp  BoardReaderBinary.hpp  BoardReaderBinaryModule.cpp  BoardReaderBinaryModule.hpp  CMakeLists.txt
src/Modules/CassandraDataLogger/: CMakeLists.txt  CassandraDataLogger.cpp  CassandraDataLogger.hpp  CassandraDataLoggerModule.cpp  CassandraDataLoggerModule.hpp
src/Modules/Dummy/: CMakeLists.txt  DummyModule.cpp  DummyModule.hpp
src/Modules/ErsTest/: CMakeLists.txt  ErsTestModule.cpp  ErsTestModule.hpp
src/Modules/EventBuilder/: CMakeLists.txt  EventBuilder.cpp  EventBuilder.hpp  EventBuilderModule.cpp  EventBuilderModule.hpp
src/Modules/EventBuilderBinary/: CMakeLists.txt  EventBuilderBinary.cpp  EventBuilderBinaryModule.cpp  EventBuilderBinaryModule.hpp
src/Modules/FileDataLogger/: CMakeLists.txt  FileDataLogger.cpp  FileDataLogger.hpp  FileDataLoggerModule.cpp  FileDataLoggerModule.hpp
src/Modules/FileDataWriter/: CMakeLists.txt  FileDataWriterModule.cpp  FileDataWriterModule.hpp
src/Modules/FileWriter/: CMakeLists.txt  FileWriterModule.cpp  FileWriterModule.hpp
src/Modules/MetricsSimulator/: CMakeLists.txt  MetricsSimulator.cpp  MetricsSimulatorModule.cpp  MetricsSimulatorModule.hpp
src/Modules/NewModule/: CMakeLists.txt  NewModule.cpp  NewModule.hpp
src/Modules/ReadoutInterface/: CMakeLists.txt  ReadoutInterfaceModule.cpp  ReadoutInterfaceModule.hpp
src/Queues/: CMakeLists.txt  README.md
src/Queues/FollyProducerConsumer/: CMakeLists.txt  FollyProducerConsumer.cpp  FollyProducerConsumer.hpp
src/Queues/MoodyReaderWriter/: CMakeLists.txt  MoodyReaderWriter.cpp  MoodyReaderWriter.hpp
src/Resources/Dummy/: CMakeLists.txt  DummyResource.cpp  DummyResource.hpp
src/Utilities/: Binary.cpp  CMakeLists.txt  Logging.cpp
src/Utils/: Align.hpp  Binary.cpp  Binary.hpp  CMakeLists.txt  ChunkedStorage.hpp  CommandlineInterpreter.hpp  Common.hpp  ConnectionMacros.hpp  DataStore.hpp  Ers.hpp  Hash.hpp  LogSettings.hpp  Logging.cpp  Logging.hpp  MemoryStruct.hpp  ProducerConsumerQueue.hpp  Resource.hpp  ReusableThread.hpp  Singleton.hpp  ThreadTagger.hpp  Types.hpp  ZmqSink.hpp  zhelpers.hpp
test/: CMakeLists.txt
test/src/: test_binary.cpp  test_file.cpp  test_flowgraph.cpp  test_json.cpp  test_logging.cpp  test_metrics.cpp  test_plugin.cpp  test_pub_topic.cpp  test_sub_topic.cpp  unit-cbor.cpp.REMOVED.git-id  unit-ubjson.cpp.REMOVED.git-id
tests/: catch.hpp.REMOVED.git-id
(+248 files in other folders)
